blockml/test/errors/01_yaml/e120/e120m.model
model: e120m
description:      
- 7
joins:
- from_view: e120_one
  as: a
